bugf: trusted-by & stay at frontier  section overflowing fixed

--- a/style.css
+++ b/style.css
@@ -113,14 +113,17 @@ main {
       display: flex;
       /* background-color: #ff0000; */
       gap: 8px;
-      flex-wrap: wrap;
-      justify-content: center;
+      /* flex-wrap: wrap; */
+      /* justify-content: center; */
       /* overflow: hidden; */
 
       img {
         box-sizing: content-box;
         max-width: 140px;
-        flex: 1;
+        /* flex: 1; */
+        flex: 1 1 0;
+        min-width: 0;
+
         height: 40px;
         background-color: rgb(27, 25, 19);
         padding: 28px;
@@ -242,10 +245,12 @@ main {
     gap: 10px;
 
     .card-frontier {
-      /* flex: 0 0 auto; */
+      flex: 1 1 0;
+      min-width: 0;
       display: flex;
       flex-direction: column;
-      height: 523px;
+
+      height: 473px;
       background-color: rgb(27, 25, 19);
       padding: 20px;
       border-radius: 8px;
@@ -256,7 +261,7 @@ main {
         font-weight: 400;
       }
       p {
-        font-size: 16px;
+        font-size: 12px;
         font-weight: 400;
         color: oklab(0.943853 0.00107113 0.000336707 / 0.6);
       }
@@ -269,8 +274,8 @@ main {
         }
       }
       img {
-        height: 370px;
-        width: 370px;
+        /* height: 90%; */
+        /* width: 90%; */
         /* margin: auto; */
         border-radius: 4px;
         margin-top: 15px;
